--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,13 @@ services:
       - .:/app
       - caddy_data:/data
       - caddy_config:/config
+      - ./docker/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
     # comment the following line in production, it allows to have nice human-readable logs in dev
     tty: true
     networks:
       - cms
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   mysqldb:
     image: mysql
@@ -35,6 +38,7 @@ services:
 
 networks:
   cms: 
+    driver: bridge
 volumes:
   caddy_data:
   caddy_config:
