add react On branch master Your branch is up to date with 'origin/master'.
Changes to be committed:
	new file:   Caddyfile
	modified:   docker-compose.yml
	new file:   package-lock.json
	modified:   package.json
	renamed:    resources/css/panel.css -> public/css/app.css
	new file:   public/css/bootstrap.css
	new file:   public/js/app.mjs
	renamed:    resources/js/panel/app.ts -> public/js/store/AppStore.mjs
	deleted:    resources/js/panel/external/es-react-dom.js
	deleted:    resources/js/panel/external/es-react.js
	modified:   resources/views/components/panel/menu.blade.php
	modified:   resources/views/layouts/panel.blade.php
	modified:   resources/views/panel/index.blade.php
	modified:   resources/views/welcome.blade.php
	deleted:    vite.config.js

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "8443:443/udp" # HTTP/3
     volumes:
       - .:/app
+      - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
       - ./docker/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
