--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "next": "^14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "typescript": "^5.6.2",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "22.5.4",
+    "@types/react": "18.3.5",
+    "vite": "^5.4.3"
   }
 }
