--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "next": "^14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
