--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
