--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-typescript": "^7.24.7",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
+    "@types/react-router": "^5.1.20",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "style-loader": "^4.0.0",
