--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "NODE_OPTIONS=\"--inspect\" webpack --watch"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +27,7 @@
     "@babel/preset-typescript": "^7.24.7",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
+    "@types/react-dom": "^18.3.0",
     "@types/react-router": "^5.1.20",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
