--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/uuid": "^10.0.0",
+    "axios": "^1.7.7",
     "next": "^14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
