--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reactivex/rxjs": "^6.6.7",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.7",
     "next": "^14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "rxjs": "^7.8.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
