--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   },
   "scripts": {
     "build": "webpack --mode production",
-    "predev":"bash $HOME/.nvm/nvm.sh use; docker compose up -d; printenv | grep NODE",
-    "dev": "webpack --watch"
+    "predev": "bash $HOME/.nvm/nvm.sh use; docker compose up -d; printenv | grep NODE",
+    "dev": "webpack --watch",
+    "lint": "eslint --flag unstable_ts_config --config eslint.config.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@reactivex/rxjs": "^6.6.7",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
     "axios": "^1.7.7",
     "next": "^14.2.9",
     "react": "^18.3.1",
@@ -29,15 +32,21 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@eslint/js": "^9.12.0",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/react-router": "^5.1.20",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "eslint": "^9.12.0",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.11.0",
+    "jiti": "^2.3.3",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.1",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
